--- a/src/app/front/components/faq/faq.component.html
+++ b/src/app/front/components/faq/faq.component.html
@@ -31,7 +31,7 @@
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <p> Step one is become a VIP Member of RotoPros if you have not already. To become a member, click on the button below to sign-up:</p>
-                <a href="signup.html" class="faqSignUpBtn">Sign Up</a>
+                <a routerLink="/signup" class="faqSignUpBtn">Sign Up</a>
               </div>
             </div>
           </div>
