enabled sorting functionality for Team pts, Opp pts and total pts columns.

--- a/src/app/front/components/nfl-lineup-optimizer/nfl-lineup-optimizer.component.html
+++ b/src/app/front/components/nfl-lineup-optimizer/nfl-lineup-optimizer.component.html
@@ -126,14 +126,13 @@
             <mfDefaultSorter by="Salary">Salary</mfDefaultSorter>
           </th>
           <th>
-            Team pts
             <mfDefaultSorter by="TeamPoints">Team pts</mfDefaultSorter>
           </th>
           <th>
-            Opp pts
+            <mfDefaultSorter by="OppPoints">Opp pts</mfDefaultSorter>
           </th>
           <th>
-            Total pts
+            <mfDefaultSorter by="TotalPoints">Total pts</mfDefaultSorter>
           </th>
           <th>
             Weather
