Lineup optimizer player team display issue fixed (MLB and NFL).

--- a/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
+++ b/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
@@ -101,7 +101,10 @@
                       [md-tooltip]="player.battingOrderConfirmed ? ' Player in starting lineup with confirmed batting order ': ' projected batting order for player'"
                       [class.yellow-dot]="!player.battingOrderConfirmed"
                       [class.green-dot]="player.battingOrderConfirmed"></span></td>
-              <td>{{getOpponentNameByPlayerId(player.id)}}@<b>{{getHomeTeamByPlayerId(player.id)}}</b></td>
+              <td *ngIf="isAwayTeamPlayer(player)"><b>{{player.team}}</b>@{{getHomeTeamByAwayTeamName(player.team)}}
+              </td>
+              <td *ngIf="isHomeTeamPlayer(player)">{{getAwayTeamByHomeTeamName(player.team)}}@<b>{{player.team}}</b>
+              </td>
               <td>{{player.fppg.toFixed(2)}}</td>
               <td>${{player.salary}}</td>
             </tr>
