--- a/src/app/front/components/nfl-lineup-optimizer/generated-nfl-lineups/generated-nfl-lineups.component.html
+++ b/src/app/front/components/nfl-lineup-optimizer/generated-nfl-lineups/generated-nfl-lineups.component.html
@@ -33,33 +33,40 @@
           <div class="btn-group btn-group-justified btn-group-noradius filter-buttons" role="group" aria-label="...">
             <div class="btn-group" role="group">
               <button type="button"
-                      (click)="activeUsedPlayerTab = 'all'"
+                      (click)="onUsedPlayerTabSelected('all')"
                       [class.active]="activeUsedPlayerTab == 'all'"
                       class="btn btn-lg btn-grayl-grayl">ALL
               </button>
             </div>
             <div class="btn-group" role="group">
               <button type="button"
-                      (click)="activeUsedPlayerTab = 'p'"
-                      [class.active]="activeUsedPlayerTab == 'p'"
-                      class="btn btn-lg btn-grayl-grayl">P
-              </button>
-            </div>
-            <div class="btn-group" role="group">
-              <button type="button"
-                      (click)="activeUsedPlayerTab = 'h'"
-                      [class.active]="activeUsedPlayerTab == 'h'"
-                      class="btn btn-lg btn-grayl-grayl">H
+                      (click)="activeUsedPlayerTab = 'filter'"
+                      [class.active]="activeUsedPlayerTab == 'filter'"
+                      md-tooltip="Filter by position"
+                      class="btn btn-lg btn-grayl-grayl"><i class="fa fa-filter" aria-hidden="true"></i>
               </button>
             </div>
           </div>
         </div>
       </div>
-
+      <div class="row" *ngIf="activeUsedPlayerTab == 'filter'">
+        <div class="col-lg-12">
+          <div class="btn-group btn-group-justified btn-group-noradius filter-buttons" role="group" aria-label="...">
+            <div class="btn-group" role="group">
+              <p-multiSelect [options]="positions"
+                             class="player-position-opt used-player-position-opt"
+                             [(ngModel)]="selectedPositions"
+                             defaultLabel="Select positions"
+                             selectedItemsLabel="{0} positions selected"
+                             (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-lg-12 table-responsive">
           <table class="table table-black table-gen-lin">
-            <tr *ngFor="let player of getUsedPlayers()">
+            <tr *ngFor="let player of filtardPlayers">
               <td width="30"><a><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a></td>
               <td>
                 <img [attr.src]="player.teamLogo" alt="team_logo"
