--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -79,7 +79,7 @@
                 <a routerLink="/articles" (click)="closeMobileMenu()">Articles</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a target="_blank" href="https://rotopros.slack.com" (click)="closeMobileMenu()">Slack</a>
+                <a target="_blank" href="https://dfsgods.slack.com" (click)="closeMobileMenu()">Slack</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/news" (click)="closeMobileMenu()">Player News</a>
@@ -129,7 +129,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="profileDrpdwn">
                     <!--<li><a href="#">My Profile</a></li>-->
-                    <li><a routerLink="/user/settings">Setting</a></li>
+                    <li><a routerLink="/user/settings">Settings</a></li>
                     <li><a (click)="logoutUser()">Log Out</a></li>
                   </ul>
                 </div>
