--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -145,7 +145,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="profileDrpdwn">
                 <!--<li><a href="#">My Profile</a></li>-->
-                <li><a routerLink="/user/settings">Setting</a></li>
+                <li><a routerLink="/user/settings">Settings</a></li>
                 <li><a (click)="logoutUser()">Log Out</a></li>
               </ul>
             </div>
