--- a/src/app/admin/components/members/members.component.html
+++ b/src/app/admin/components/members/members.component.html
@@ -37,6 +37,9 @@
             <th>
               Active/Deactive
             </th>
+            <!--<th>
+              Is Analyst
+            </th>-->
             <th>
               Action
             </th>
@@ -45,14 +48,12 @@
           <tbody>
           <tr *ngFor="let members of mf.data">
             <td>{{members.first_name}}
-              <md-icon *ngIf="members.is_verified" md-tooltip='Verified' tooltip-position='above'
-                       class='md-24 pull-right verified'>check
-              </md-icon>
-              <md-icon *ngIf="!members.is_verified" md-tooltip='Not Verified' tooltip-position='above'
-                       class='md-24 pull-right unverified'>clear
-              </md-icon>
               <md-icon *ngIf="members.is_memberspace" md-tooltip='Memberspace User' tooltip-position='above'
                        class='md-24 pull-right member'>flag
+              </md-icon>
+              <md-icon *ngIf="members.is_verified" md-tooltip='Verified' tooltip-position='above'
+                       style="color: #e91e63"
+                       class='md-24 pull-right member verified'>check
               </md-icon>
             </td>
             <td>{{members.last_name}}</td>
@@ -65,10 +66,26 @@
                 <md-slide-toggle (change)="changeStatus(members._id)"></md-slide-toggle>
               </div>
             </td>
+            <!--<td>
+              <div>
+                <md-slide-toggle (change)="onRoleChanged($event,members._id)" [checked]="members.role == 'analyst'"></md-slide-toggle>
+              </div>
+            </td>-->
             <td class="member-icon">
               <a *ngIf="!members.is_verified" md-tooltip='Verify Email' (click)="sendVerifyEmail(members.email)">
                 <md-icon>email</md-icon>
               </a>
+              <a (click)="onVerifyBtnClicked(members)"
+                 *ngIf="!members.is_verified && (!isVerifying || (verifyingMember?._id != members._id))">
+                <md-icon md-tooltip='Click to verify'
+                         tooltip-position='above'
+                         class='unverified'>check
+                </md-icon>
+              </a>
+              <md-progress-spinner *ngIf="isVerifying && (verifyingMember?._id == members._id)"
+                                   mode="indeterminate"
+                                   color="accent"
+                                   style="width: 24px;height: 24px;display: inline-block"></md-progress-spinner>
               <!--<a md-tooltip='Change Password' (click)="changePassword(members.email)"><i class="fa fa-unlock"></i></a>-->
             </td>
           </tr>
