--- a/src/app/user/components/settings/subscriptions/subscriptions.component.html
+++ b/src/app/user/components/settings/subscriptions/subscriptions.component.html
@@ -1,12 +1,24 @@
 <div class="settings-content" *ngIf="userData">
-  <div *ngIf="userData.is_subscribe">
-    <div class="col-sm-4 plan-price-card-wrapper" style="text-align: center;"
-         *ngFor="let plan of userData.subscriptions;">
-      <div class="plan-price-card">
-        <h4 class="text-center">{{ plan.current_period_end | date : "medium" }}</h4>
-        <a class="plan-apply-btn btn btn-default"
-           (click)="onBtnUnsubscribeClick(plan)">Unsubscribe</a>
+  <div *ngIf="userData.is_subscribe" class="row">
+    <div class="plan-price-card col-sm-12" *ngFor="let plan of userData.subscriptions;">
+      <div class="row">
+        <div class="col-sm-2 field-name">Plan Name</div>
+        <div class="col-sm-12 col-md-10 field-value">{{plan.plan_name}}</div>
       </div>
+      <div class="row">
+        <div class="col-sm-2 field-name">Amount</div>
+        <div class="col-sm-12 col-md-10 field-value">${{plan.plan_amount/100}}</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2 field-name">Subscription</div>
+        <div class="col-sm-12 col-md-5 field-value">Start date : {{plan.current_period_start | date : 'medium'}}</div>
+        <div class="col-sm-12 col-md-5 field-value">End Date : {{plan.current_period_end | date : 'medium'}}</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 card-action"><a class="btn-unsubscribe plan-apply-btn btn btn-small btn-default" (click)="onBtnUnsubscribeClick(plan)">Unsubscribe</a>
+        </div>
+      </div>
+
     </div>
   </div>
   <div *ngIf="!userData.is_subscribe">
