Give toggle button to switch between live plans and test mode plans in admin panel Plans menu. Hide Analyst and Coupons menu items from admin panel.

--- a/src/app/admin/components/left-bar/left-bar.component.html
+++ b/src/app/admin/components/left-bar/left-bar.component.html
@@ -18,14 +18,14 @@
         </li> -->
       <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/members']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Members</p></a>
       </li>
-      <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/providers']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Analysts</p></a>
-      </li>
+      <!--<li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/providers']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Analysts</p></a>
+      </li>-->
       <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/pages']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>CMS Pages</p></a>-->
       <!--</li>-->
       <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/plans']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Plans</p></a>
       </li>
-      <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/coupons']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Coupons</p></a>
-      </li>
+      <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/coupons']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Coupons</p></a>
+      </li>-->
       <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/excel']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Excel Tool</p></a>
       </li>
       <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/contests']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Contests</p></a>-->
