--- a/src/app/admin/components/plans/plans.component.css
+++ b/src/app/admin/components/plans/plans.component.css
@@ -1,3 +1,9 @@
+.page-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .plan-list {
   display: flex;
   flex-direction: column;
@@ -25,4 +31,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.mat-button-toggle-checked {
+  background-color: #e91e63;
+  color: #fff;
 }
